saving new changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "GuRuStuWP",
-  "version": "0.0.1",
+  "name": "Html5 Start",
+  "version": "0.1.0",
   "description": "grunt",
   "private": true,
   "devDependencies": {
